--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,24 @@
+altgraph==0.17.3
+auto-py-to-exe==2.34.0
 black==23.3.0
+bottle==0.12.25
+bottle-websocket==0.2.9
 click==8.1.3
+Eel==0.16.0
+future==0.18.3
+gevent==22.10.2
+gevent-websocket==0.10.1
+greenlet==2.0.2
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.3.0
 pygame==2.3.0
+pyinstaller==5.10.1
+pyinstaller-hooks-contrib==2023.2
+pyparsing==3.0.9
 tomli==2.0.1
 typing_extensions==4.5.0
+whichcraft==0.6.1
+zope.event==4.6
+zope.interface==6.0
