--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ gevent==22.10.2
 gevent-websocket==0.10.1
 greenlet==2.0.2
 mypy-extensions==1.0.0
+numpy==1.24.3
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.3.0
