--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "3.9.7"
 pygame = "^2.5.2"
 numpy = "^1.26.0"
+pdoc = "^14.1.0"
+snakeviz = "^2.2.0"
 
 
 [build-system]
