--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pygame = "^2.5.2"
 numpy = "^1.26.0"
 snakeviz = "^2.2.0"
 pdoc3 = "^0.10.0"
+scikit-learn = "^1.3.2"
+pandas = "^2.1.4"
+jupyter = "^1.0.0"
 
 
 [build-system]
