--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ scikit-learn = "^1.3.2"
 pandas = "^2.1.4"
 jupyter = "^1.0.0"
 matplotlib = "^3.8.2"
+ipycanvas = "^0.13.1"
+orjson = "^3.9.10"
+pillow = "^10.1.0"
 
 
 [build-system]
